--- a/src/modules/user/editors/group.html
+++ b/src/modules/user/editors/group.html
@@ -1,108 +1,64 @@
 <md-content>
 	<mb-titled-block 
 		mb-preloading="ctrl.groupLoading"
-		mb-title="Info">
-		<div layout="column"
-			layout-padding>
-			<div 
-				layout="column" 
-				layout-align="center start">
-				<table
-					class="amd-table amd-table-description">
-					<tr>
-						<td mb-translate>ID</td>
-						<td>{{::group.id}}</td>
-					</tr>
-					<tr>
-						<td mb-translate>Name</td>
-						<td>
-							<mb-inline
-								ng-model="group.name"
-								mb-inline-type="text"
-								mb-inline-label="Group name"
-								mb-inline-enable="app.user.tenant_owner"
-								mb-inline-on-save="save()">
-									{{group.name || '...'}}
-							</mb-inline>
-						</td>
-					</tr>
-					<tr>
-						<td mb-translate>Description</td>
-						<td>
-							<mb-inline
-								ng-model="group.description"
-								mb-inline-type="text"
-								mb-inline-label="Group description"
-								mb-inline-enable="app.user.tenant_owner"
-								mb-inline-on-save="save()">
-									{{group.description || '...'}}
-							</mb-inline>
-						</td>
-					</tr>
-				</table>
-			</div>
+		mb-title="Info"
+		layout="column">
+		<div layout="column">
+			<md-input-container 
+				class="md-block">
+				<label mb-translate>ID</label>
+				<input 
+					ng-model="ctrl.model.id"
+					disabled>
+			</md-input-container>
+			<md-input-container 
+				class="md-block">
+				<label mb-translate>Name</label>
+				<input 
+					ng-model="ctrl.model.name"
+					ng-change="ctrl.setDerty(true)">
+			</md-input-container>
+			<md-input-container 
+				class="md-block">
+				<label mb-translate>Description</label>
+				<textarea 
+					ng-model="ctrl.model.description"
+					ng-change="ctrl.setDerty(true)"></textarea>
+			</md-input-container>
+			<md-chips 
+				ng-model="ctrl.model.roles"
+				ng-change="ctrl.setDerty(true)"
+				input-aria-label="Roles"
+				container-hint="Press the right and left arrow keys to change role selection."
+				container-empty-hint="Enter the text area, start typing, and then press enter when done to add a role."
+				md-autocomplete-snap>
+				<md-autocomplete
+					md-selected-item="ctrl.selectedItem"
+					md-search-text="ctrl.searchText"
+					md-items="item in ctrl.findRole(ctrl.searchText)"
+					md-item-text="item.name"
+					input-aria-describedby="autocompleteTitle"
+					placeholder="Search for a role">
+					<span md-highlight-text="ctrl.searchText">{{item.name}} :: {{item.code_name}}</span>
+				</md-autocomplete>
+				<md-chip-template>
+					<strong>{{$chip.name}}</strong>
+				</md-chip-template>
+			</md-chips>
 		</div>
-		<div
-			layout="column" 
-			layout-gt-sm="row">
+		<!-- Action bar -->
+		<div layout="row">
 			<span flex></span>
 			<md-button 
-				class="md-raised md-accent" 
-				ng-click="remove()">
-				<mb-icon>delete</mb-icon>
+				class="md-raised md-primary"
+				ng-disabled="!ctrl.isDerty()"
+				ng-click="ctrl.updateGroup($event)">
+				<span mb-translate>Save</span>
+			</md-button>
+			<md-button 
+				class = "md-raised md-accent"
+				ng-click="ctrl.deleteModel($event)">
 				<span mb-translate>Delete</span>
-			</md-button>
-		</div>
-	</mb-titled-block>
-
-	<mb-titled-block 
-		mb-preloading="ctrl.roleLoading"
-		mb-title="Roles">
-		<md-chips 
-			ng-model="roles.items"
-			md-on-remove="removeRole($chip)">
-			<md-chip-template>
-				<strong>{{$chip.name}}</strong>
-			</md-chip-template>
-		</md-chips>
-		<div 
-			ng-show="!roles.items || roles.items.length == 0"
-			layout="column" 
-			layout-align="center center">
-			<p mb-translate>Group has no role.</p>
-		</div>
-		<div layout="row">
-			<span flex></span>
-			<md-button class="md-raised"
-				ng-click="changeRoles()">
-				<mb-icon>edit</mb-icon>
-				<span mb-translate>Edit</span>
-			</md-button>
-		</div>
-	</mb-titled-block>
-	
-	<mb-titled-block 
-		mb-preloading="ctrl.userLoading"
-		mb-title="Accounts">
-		<md-chips 
-			ng-model="users.items"
-			md-on-remove="removeUser($chip)">
-			<md-chip-template>
-				<strong>{{$chip.login}}</strong>
-			</md-chip-template>
-		</md-chips>
-		<div 
-			ng-show="!users.items || users.items.length == 0"
-			layout="column" 
-			layout-align="center center">
-			<p mb-translate>Group has no any member.</p>
-		</div>
-		<div layout="row">
-			<span flex></span>
-			<md-button class="md-raised"
-				ng-click="changeUsers()">
-				<mb-icon>edit</mb-icon>
-				<span mb-translate>Edit</span>
 			</md-button>
 		</div>
 	</mb-titled-block>
