--- a/src/modules/sdp/wizards/new-asset/tagsPage.html
+++ b/src/modules/sdp/wizards/new-asset/tagsPage.html
@@ -2,6 +2,7 @@
 	ng-model="ctrl.tags" 
 	md-autocomplete-snap
 	input-aria-label="Tags">
+	<label id="toLabel" mb-translate>Tags</label>
 	<md-autocomplete 
 		input-aria-describedby="autocompleteTitle" 
 		placeholder="Search for a tag"
