--- a/src/modules/shop/editors/product.html
+++ b/src/modules/shop/editors/product.html
@@ -1,7 +1,5 @@
 <md-content>
 	<mb-titled-block 
-		ng-show="!ctrl.edit"
-		mb-progress="ctrl.loading"
 		mb-title="{{'Product' | translate}}"
 		layout="column">
 		<div 
@@ -10,98 +8,139 @@
 			layout-align-xs="center center" 
 			layout-padding>
 			<mb-inline
-				ng-model="product.avatar"
+				ng-model="ctrl.model.avatar"
 				mb-inline-enable="{{true}}"
 				mb-inline-type="image"
-				mb-inline-on-save="update()">
-				<img width="256px" height="256px" ng-src="{{product.avatar}}" />
+				mb-inline-on-save="ctrl.setDerty(true)">
+				<img width="256px" height="256px" ng-src="{{ctrl.model.avatar}}" />
 			</mb-inline>
-			<table>
-				<tr>
-					<td mb-translate="">ID  </td>
-					<td>: {{product.id}}</td>
-				</tr>
-				<tr>
-					<td mb-translate="">Name  </td>
-					<td><mb-inline
-						ng-model="product.title"
-						mb-inline-enable="{{true}}"
-						mb-inline-type="text"
-						mb-inline-on-save="update()">: {{product.title}}</mb-inline></td>
-				</tr>
-				<tr>
-					<td mb-translate="">Description  </td>
-					<td><mb-inline
-						ng-model="product.description"
-						mb-inline-enable="{{true}}"
-						mb-inline-type="text"
-						mb-inline-on-save="update()">: {{product.description}}</mb-inline></td>
-				</tr>
-				<tr>
-					<td mb-translate="">Price  </td>
-					<td><mb-inline
-						ng-model="product.price"
-						mb-inline-enable="{{true}}"
-						mb-inline-type="text"
-						mb-inline-on-save="update()">: {{product.price}}</mb-inline></td>
-				</tr>
-				<tr>
-					<td mb-translate="">Off  </td>
-					<td><mb-inline
-						ng-model="product.off"
-						mb-inline-enable="{{true}}"
-						mb-inline-type="text"
-						mb-inline-on-save="update()">: {{product.off}}</mb-inline></td>
-				</tr>
-				<tr>
-					<td mb-translate="">Manufacturer  </td>
-					<td><mb-inline
-						ng-model="product.manufacturer"
-						mb-inline-enable="{{true}}"
-						mb-inline-type="text"
-						mb-inline-on-save="update()">: {{product.manufacturer}}</mb-inline></td>
-				</tr>
-				<tr>
-					<td mb-translate="">Brand  </td>
-					<td><mb-inline
-						ng-model="product.brand"
-						mb-inline-enable="{{true}}"
-						mb-inline-type="text"
-						mb-inline-on-save="update()">: {{product.brand}}</mb-inline></td>
-				</tr>
-				<tr>
-					<td mb-translate="">Model  </td>
-					<td><mb-inline
-						ng-model="product.model"
-						mb-inline-enable="{{true}}"
-						mb-inline-type="text"
-						mb-inline-on-save="update()">: {{product.model}}</mb-inline></td>
-				</tr>
-				<tr>
-					<td mb-translate="">Creation Date  </td>
-					<td>: {{product.creation_dtime| mbDate}}</td>
-				</tr>
-				<tr>
-					<td mb-translate="">Last Modified Date  </td>
-					<td>: {{product.modif_dtime| mbDate}}</td>
-				</tr>
-			</table>
+			<div
+				layout="column"
+				flex="auto">
+				<md-input-container 
+					class="md-block">
+					<label mb-translate>Title</label>
+					<input 
+						ng-model="ctrl.model.title"
+						ng-change="ctrl.setDerty(true)"
+						aria-label="Title">
+				</md-input-container>
+				<md-input-container 
+					class="md-block">
+					<label mb-translate>Description</label>
+					<textarea 
+						ng-model="ctrl.model.description"
+						ng-change="ctrl.setDerty(true)"
+						aria-label="description"></textarea>
+				</md-input-container>
+				
+				<md-input-container 
+					class="md-block">
+					<label mb-translate>Price</label>
+					<input 
+						ng-model="ctrl.model.price"
+						ng-change="ctrl.setDerty(true)"
+						type="number"
+						aria-label="Price">
+				</md-input-container>
+				<md-input-container 
+					class="md-block">
+					<label mb-translate>Off</label>
+					<input 
+						ng-model="ctrl.model.off"
+						ng-change="ctrl.setDerty(true)"
+						type="number"
+						aria-label="Off">
+				</md-input-container>
+				<md-input-container 
+					class="md-block">
+					<label mb-translate>Manufacturer</label>
+					<input 
+						ng-model="ctrl.model.manufacturer"
+						ng-change="ctrl.setDerty(true)"
+						type="text"
+						aria-label="Manufacturer">
+				</md-input-container>
+				<md-input-container 
+					class="md-block">
+					<label mb-translate>Brand</label>
+					<input 
+						ng-model="ctrl.model.brand"
+						ng-change="ctrl.setDerty(true)"
+						type="text"
+						aria-label="Brand">
+				</md-input-container>
+				<md-input-container 
+					class="md-block">
+					<label mb-translate>Model</label>
+					<input 
+						ng-model="ctrl.model.model"
+						ng-change="ctrl.setDerty(true)"
+						type="text"
+						aria-label="Model">
+				</md-input-container>
+			</div>
 		</div>
-		<div layout-gt-xs="row"
-			 layout="column">
+		
+		<!-- TODO: categoris -->
+		<div>
+			<label id="toLabel" mb-translate>Categories</label>
+			<md-chips 
+				ng-model="ctrl.categories" 
+				ng-change="ctrl.setDerty(true)"
+				md-autocomplete-snap
+				input-aria-label="Categories">
+				<md-autocomplete 
+					input-aria-describedby="autocompleteTitle" 
+					placeholder="Search for a category"
+					md-no-cache="true"
+					md-autoselect="true"
+					md-selected-item="ctrl.selectedCategories" 
+					md-search-text="ctrl.searchCategoiresText"
+					md-items="item in ctrl.searchCategoires(ctrl.searchCategoiresText)" 
+					md-item-text="item.name"
+					md-clear-button="true">
+					<md-item-template>
+						<span md-highlight-text="ctrl.searchText">{{item.name}}({{::item.name}})</span>
+					</md-item-template>
+					<md-not-found>
+						<md-button
+							style="width: 100%"
+							ng-click="ctrl.createCategory(ctrl.searchCategoiresText, $event)">
+							<span mb-translate>Create a New Category</span> (<em>{{ctrl.searchCategoiresText}}</em>)
+						</md-button>
+					</md-not-found>
+				</md-autocomplete>
+				<md-chip-template>
+					<span
+						ng-click="ctrl.execOn($chip, AMD_SHOP_CATEGORY_SHOW_ACTION, $event)">
+						<mb-icon size="12">launch</mb-icon>
+						<strong>{{$chip.name}}</strong>
+					</span>
+				</md-chip-template>
+			</md-chips>
+		</div>
+		
+		<!-- Action bar -->
+		<div layout="row">
 			<span flex></span>
 			<md-button 
+				class="md-raised md-primary"
+				ng-disabled="!ctrl.isDerty()"
+				ng-click="ctrl.updateProduct($event)">
+				<span mb-translate>Save</span>
+			</md-button>
+			<md-button 
 				class = "md-raised md-accent"
-				ng-click="remove()">
-				<span mb-translate="">Delete</span>
+				ng-click="ctrl.deleteModel($event)">
+				<span mb-translate>Delete</span>
 			</md-button>
 		</div>
 	</mb-titled-block>
 
 	<!-- Metafields -->
 	<mb-titled-block
-		ng-show="!ctrl.edit"
-		mb-progress="ctrl.loading || ctrl.loadingMetas"
+		mb-title="{{'Extra Attributes' | translate}}"
 		layout="column">
 		<table class="mb-table mb-shop-table">
 			<thead>
@@ -114,62 +153,65 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr ng-repeat="meta in metafeilds">
+				<tr ng-repeat="meta in ctrl.metas">
 					<td>
-			<am-wb-inline
-				ng-model="meta.key"
-				am-wb-inline-enable="false"
-				am-wb-inline-type="text"
-				am-wb-inline-label="{{'Field key'  | translate}}"
-				am-wb-inline-on-save="inlineUpdateMetafield(meta)">
-				<p> {{meta.key}} </p>
-			</am-wb-inline>
-			</td>
-			<td>
-			<am-wb-inline
-				ng-model="meta.value"
-				am-wb-inline-enable="true"
-				am-wb-inline-type="text"
-				am-wb-inline-label="{{'Field value'  | translate}}"
-				am-wb-inline-on-save="inlineUpdateMetafield(meta)">
-				<p> {{meta.value}} </p>
-			</am-wb-inline>
-			</td>
-			<td>
-			<am-wb-inline
-				ng-model="meta.unit"
-				am-wb-inline-enable="true"
-				am-wb-inline-type="text"
-				am-wb-inline-label="{{'Unit'  | translate}}"
-				am-wb-inline-on-save="inlineUpdateMetafield(meta)">
-				<p> {{meta.unit}} </p>
-			</am-wb-inline>
-			</td>
-			<td>
-			<am-wb-inline
-				ng-model="meta.namespace"
-				am-wb-inline-enable="true"
-				am-wb-inline-type="text"
-				am-wb-inline-label="{{'Namespace'  | translate}}"
-				am-wb-inline-on-save="inlineUpdateMetafield(meta)">
-				<p> {{meta.namespace}} </p>
-			</am-wb-inline>
-			</td>
-			<td style="text-align: center;">
-				<div layout="row">
-					<md-button class="md-icon-button md-primary"
-							   ng-click="updateMetafield(meta)"
-							   aria-label="edit metafield">
-						<mb-icon>edit</mb-icon>
-					</md-button>
-					<md-button class="md-icon-button md-accent"
-							   ng-click="removeMetafield(meta)"
-							   aria-label="remove variable">
-						<mb-icon>delete</mb-icon>
-					</md-button>
-				</div>
-			</td>
-			</tr>
+						<md-input-container 
+							class="md-block">
+							<input 
+								ng-model="meta.key"
+								ng-change="ctrl.setMetaDerty(meta)"
+								placeholder="Key"
+								aria-label="Meta key">
+						</md-input-container>
+					</td>
+					<td>
+						<md-input-container 
+							class="md-block">
+							<input 
+								ng-model="meta.value"
+								ng-change="ctrl.setMetaDerty(meta)"
+								placeholder="Value"
+								aria-label="Meta Value">
+						</md-input-container>
+					</td>
+					<td>
+						<md-input-container 
+							class="md-block">
+							<input 
+								ng-model="meta.unit"
+								ng-change="ctrl.setMetaDerty(meta)"
+								placeholder="Unit"
+								aria-label="Meta Unit">
+						</md-input-container>
+					</td>
+					<td>
+						<md-input-container 
+							class="md-block">
+							<input 
+								ng-model="meta.namespace"
+								ng-change="ctrl.setMetaDerty(meta, $event)"
+								placeholder="Namespace"
+								aria-label="Meta Namespace">
+						</md-input-container>
+					</td>
+					<td style="text-align: center;">
+						<div layout="row">
+							<md-button 
+								ng-if="meta.key === 'image'"
+								class="md-icon-button md-accent"
+								ng-click="ctrl.setMetaValue(meta, 'image-url', $event)"
+								aria-label="Set image to meta value">
+								<mb-icon>insert_photo</mb-icon>
+							</md-button>
+							<md-button 
+								class="md-icon-button md-accent"
+								ng-click="ctrl.setMetaDerty(meta)"
+								aria-label="Remove Variable">
+								<mb-icon>delete</mb-icon>
+							</md-button>
+						</div>
+					</td>
+				</tr>
 			</tbody>
 		</table>
 		<div layout="row">
@@ -177,50 +219,11 @@
 			<md-button
 				layout-align="end center"
 				class="md-icon-button md-raised md-primary"
-				ng-click="addMetafield()"
+				ng-click="ctrl.addMetafield()"
 				aria-label="add meta data">
 				<mb-icon>add</mb-icon>
 			</md-button>
 		</div>
 	</mb-titled-block>
-
-	<!--Categories the product could be assigned to. -->
-	<mb-titled-block 
-		ng-show="!ctrl.edit"
-		mb-progress="ctrl.loading || loadingCategories || updatingCategories"
-		mb-title="{{'Categories' | translate}}"
-		layout="column">
-
-		<md-list flex ng-if="categories"> 
-			<md-list-item 
-				ng-repeat="category in categories track by $index"
-				class="md-2-line" 
-				ng-href="{{'categories/' + category.id}}">
-
-				<img ng-if="category.thumbnail" ng-src="{{category.thumbnail}}"  class="md-avatar" />
-				<mb-icon ng-if="!category.thumbnail">folder_special</mb-icon>
-				<div class="md-list-item-text" layout="column">
-					<h3>{{category.name}}</h3>
-					<p>{{category.description}}</p>
-				</div>
-				<md-divider md-inset></md-divider> 
-			</md-list-item>
-		</md-list>
-
-		<div layout="column"
-			 ng-if="!categories || categories.length === 0">
-			<p style="text-align: center" mb-translate="">Nothing found.</p>
-		</div>
-
-		<div layout="row">
-			<span flex></span>
-			<md-button 
-				class="md-raised md-primary" 
-				ng-click="selectCategories()">
-				<span mb-translate="">Edit</span>
-			</md-button>
-		</div>
-	</mb-titled-block>
-
 </md-content>
 
