init porduct with minimum information

--- a/src/modules/shop/editors/product.html
+++ b/src/modules/shop/editors/product.html
@@ -142,6 +142,7 @@
 	<!-- Metafields -->
 	<mb-titled-block
 		mb-title="{{'Extra Attributes' | translate}}"
+		mb-more-actions="ctrl.metafieldsMoreActions"
 		layout="column">
 		<table class="mb-table mb-shop-table">
 			<thead>
