--- a/src/modules/shop/editors/category.html
+++ b/src/modules/shop/editors/category.html
@@ -1,100 +1,171 @@
-<md-content 
-	style="overflow: auto;">
-	<mb-titled-block 
-		mb-progress="ctrl.isBusy || ctrl.isCategoryBusy"
-		mb-title="{{'Category' | translate}}"
-		layout="column">
-		<div layout="row" 
-			 layout-xs="column" 
-			 layout-align-xs="center center" 
-			 layout-padding>
+<div
+	layout="column">
+	<!-- Action bar -->
+	<md-toolbar layout="row">
+		<md-button 
+			ng-disabled="!ctrl.isDerty()"
+			ng-click="ctrl.updateCategory($event)">
+			<span mb-translate>Save</span>
+		</md-button>
+		<md-button 
+			ng-click="ctrl.deleteModel($event)">
+			<span mb-translate>Delete</span>
+		</md-button>
+	</md-toolbar>
+	<md-content 
+		flex>
+		
+		<mb-titled-block
+			mb-title="{{'Category' | translate}}"
+			mb-more-actions="ctrl.metafieldsMoreActions"
+			layout="row" 
+			layout-xs="column" 
+			layout-align-xs="center center">
 			<mb-inline
-				ng-model="ctrl.category.thumbnail"
+				ng-model="ctrl.model.thumbnail"
+				ng-change="ctrl.setDerty(true)"
 				mb-inline-enable="{{true}}"
 				mb-inline-type="image"
-				mb-inline-on-save="ctrl.updateCategory($event)"">
+				mb-inline-on-save="ctrl.setDerty(true, $event)">
 				<img 
 					width="256px" height="256px" 
 					ng-src-error="resource/images/baseline-help-24px.svg"
-					ng-src="{{ctrl.category.thumbnail}}" />
+					ng-src="{{ctrl.model.thumbnail}}" />
 			</mb-inline>
-
-			<table>
-				<tr>
-					<td mb-translate="">ID </td>
-					<td>: {{::ctrl.category.id}}</td>
-				</tr>
-				<tr>
-					<td mb-translate="">Parent </td>
-					<td>
-					<mb-inline
-							ng-model="ctrl.parentId"
-							mb-inline-enable="{{true}}"
-							mb-inline-type="{{::AMD_SHOP_CATEGORY_SP}}"
-							mb-inline-on-save="ctrl.setParent($value, $event)">: {{ctrl.parent.name}}</mb-inline></td>
-				</tr>
-				<tr>
-					<td mb-translate="">Name </td>
-					<td><mb-inline
-							ng-model="ctrl.category.name"
-							mb-inline-enable="{{true}}"
-							mb-inline-type="text"
-							mb-inline-on-save="ctrl.updateCategory($event)">: {{ctrl.category.name}}</mb-inline></td>
-				</tr>
-				<tr>
-					<td mb-translate="">Description </td>
-					<td><mb-inline
-						ng-model="ctrl.category.description"
-						mb-inline-enable="{{true}}"
-						mb-inline-type="text"
-						mb-inline-on-save="ctrl.updateCategory($event)">: {{ctrl.category.description}}</mb-inline></td>
-				</tr>
-			</table>
-		</div>
-		<div 
-			layout-gt-xs="row"
+			<div
+				layout="column">
+				<md-input-container 
+					class="md-block">
+					<label mb-translate>Name</label>
+					<input 
+						ng-model="ctrl.model.name"
+						ng-change="ctrl.setDerty(true)"
+						aria-label="Name">
+				</md-input-container>
+				<md-input-container 
+					class="md-block">
+					<label mb-translate>Description</label>
+					<textarea 
+						ng-model="ctrl.model.description"
+						ng-change="ctrl.setDerty(true)"
+						aria-label="description"></textarea>
+				</md-input-container>
+				
+				<label id="parentLable" layout-padding mb-translate>Parent</label>
+				<md-chips 
+					ng-model="ctrl.parents"
+					ng-change="ctrl.setDerty(true)"
+					name="parent" 
+					readonly="false"
+					md-removable="true" 
+					md-max-chips="1" 
+					placeholder="Parent"
+					input-aria-label="Parent">
+					<md-chip-template>
+						<strong>{{$chip.name}}</strong>
+						<em>({{$chip.id}})</em>
+					</md-chip-template>
+					<md-autocomplete
+						md-input-name="parent"
+						md-selected-item="ctrl.parent"
+						md-search-text="ctrl.parentSearchText"
+						md-items="item in ctrl.searchCategoires(ctrl.parentSearchText, $event)"
+						md-item-text="item.name"
+						md-escape-options="clear"
+						md-require-match=""
+						md-floating-label="Parent Category"
+						input-aria-describedby="Parent Category">
+						<md-item-template>
+							<strong md-highlight-text="ctrl.parentSearchText">{{::item.name}}</strong><br></br>
+							<em md-highlight-text="ctrl.parentSearchText">{{::item.description}}</em>
+						</md-item-template>
+					</md-autocomplete>
+				</md-chips>
+				
+			</div>
+		</mb-titled-block>
+			
+			
+			
+			
+		<!-- Metafields -->
+		<mb-titled-block
+			mb-title="{{'Extra Attributes' | translate}}"
+			mb-more-actions="ctrl.metafieldsMoreActions"
 			layout="column">
-			<span flex></span>
-			<md-button 
-				class = "md-raised md-accent"
-				ng-click="ctrl.deleteCategory($event)">
-				<span mb-translate="">Delete</span>
-			</md-button>
-		</div>
-	</mb-titled-block>
+			<table class="mb-table mb-shop-table">
+				<thead>
+					<tr mb-colors="{color: 'primary-700'}">
+						<td style="width: 20%" mb-translate="">Field key</td>
+						<td style="width: 20%" mb-translate="">Field value</td>
+						<td mb-translate style="width: 10%;text-align: center;"></td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr 
+						ng-repeat="meta in ctrl.metafields"
+						ng-show="meta.key !== 'variant'">
+						<td>
+							<md-input-container 
+								class="md-block">
+								<input 
+									ng-model="meta.key"
+									ng-change="ctrl.setMetaDerty(meta)"
+									placeholder="Key"
+									aria-label="Meta key">
+							</md-input-container>
+						</td>
+						<td>
+							<md-input-container 
+								class="md-block">
+								<input 
+									ng-model="meta.value"
+									ng-change="ctrl.setMetaDerty(meta)"
+									placeholder="Value"
+									aria-label="Meta Value">
+							</md-input-container>
+						</td>
+						<td style="text-align: center;">
+							<div layout="row">
+								<md-button 
+									ng-if="meta.key === 'image'"
+									class="md-icon-button md-accent"
+									ng-click="ctrl.setMetaValueByResource(meta, 'image-url', $event)"
+									aria-label="Set image to meta value">
+									<mb-icon>insert_photo</mb-icon>
+								</md-button>
+								<md-button 
+									ng-if="meta.key === 'color'"
+									class="md-icon-button md-accent"
+									ng-click="ctrl.setMetaValueByResource(meta, 'color', $event)"
+									aria-label="Set image to meta value">
+									<mb-icon>palette</mb-icon>
+								</md-button>
+								<md-button 
+									class="md-icon-button md-accent"
+									ng-click="ctrl.removeMetafield(meta)"
+									aria-label="Remove Variable">
+									<mb-icon>delete</mb-icon>
+								</md-button>
+							</div>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<div layout="row">
+				<span flex></span>
+				<md-button
+					layout-align="end center"
+					class="md-icon-button md-raised md-primary"
+					ng-click="ctrl.addMetafield()"
+					aria-label="add meta data">
+					<mb-icon>add</mb-icon>
+				</md-button>
+			</div>
+		</mb-titled-block>
+	</md-content>
+</div>
 
 
-	<!-- subcategories -->
-	<mb-titled-block
-		layout="column"
-		ng-init="childrenActions=[{
-			title: 'Add category',
-			expression: 'ctrl.addChild($event)'
-		}]"
-		mb-progress="ctrl.isBusy || ctrl.isChildrenBusy"
-		mb-title="{{'Children' | translate}}"
-		mb-more-actions="childrenActions">
-		<div layout="column"
-			 ng-if="ctrl.children.length == 0 && !ctrl.isBusy">
-			<p style="text-align: center" mb-translate>List is empty.</p>
-		</div>
-		<md-list flex>
-			<md-list-item 
-				ng-repeat="pobject in ctrl.children track by pobject.id"
-				class="md-2-line" 
-				ng-href="shop/categories/{{::pobject.id}}">
-				<img ng-src="{{pobject.thumbnail}}" ng-if="pobject.thumbnail" class="md-avatar" />
-				<mb-icon ng-if="!pobject.thumbnail">folder_special</mb-icon>
-				<div 
-					class="md-list-item-text" 
-					layout="column">
-					<h4>{{pobject.name}}</h4>
-					<p>{{pobject.description}}</p>
-				</div>
-				<md-divider md-inset></md-divider>
-			</md-list-item>
 
-		</md-list>
-	</mb-titled-block>
 
-</md-content>
